# llm-hub

./: .editorconfig  .gitattributes  .gitignore  .project.json  CHANGELOG.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  LICENSE  LIVE_PRODUCTION_TEST_REPORT.md  OPEN_SOURCE.md  README.md  SECURITY.md  SUCCESS.txt  logs.bat  package.json  pyproject.toml  remove-autostart.bat  setup-autostart.bat  show-me-animated.bat  show-me-quick.bat  show-me.bat  start-control-center.bat  start-health-monitor.bat  start.bat  stop.bat
.config/: linter.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  markdown-link-check-config.json  release.yml
docs/: CONFIGURATION.md  DEVELOPMENT.md  FINAL-VALIDATION-SUMMARY.md  INSTALL.md  LANGUAGE-CHECK.md  README.md  RELEASE-CHECKLIST.md  TROUBLESHOOTING.md  VALIDATION-EXECUTION.md  VALIDATION.md
docs/api/: MCP-ENDPOINTS.md
docs/architecture/: OVERVIEW.md
docs/architecture/decisions/: ADR-000-template.md  ADR-001-minimal-platform.md  ADR-002-http-only-bridge.md  ADR-INDEX.md
docs/dashboard/: README.md  index.html
docs/examples/: README.md
docs/examples/curl/: basic_usage.sh
docs/examples/javascript/: basic_usage.js
docs/examples/python/: basic_usage.py
ops/: Makefile
ops/autostart/: README.md  llm-hub-autostart.xml
ops/compose/: .env.development.example  .env.example  .env.production.example  docker-compose.prod.yml  docker-compose.yml  orchestrate.bat  orchestrate.sh  test-orchestration.py
ops/control/: README.md  control.js  control_api.py  index.html  system_tray.py
ops/scripts/: direct-test.py  error-test.py  inference-test.py  integration-test.sh  lm-studio-mock.py  mcp-compliance-test.sh  mcp-validate.py  model-update-test.py  rule0-check.sh  run-all-tests.sh  test-results-template.md  test-summary.sh
ops/testing/: README.md  show_me_framework.py  test_runner.py  visual_indicators.py  web_dashboard.html
platform/: __init__.py
platform/contracts/: __init__.py  discovery.v1.yml  gateway.v1.yml  lm-bridge.v1.yml
platform/core/: __init__.py  contract_loader.py
platform/runtime/: __init__.py  bootstrap.py  env_validator.py  error_handler.py  lifecycle.py
temp/: pim.md  pim2.md  pim3.md  pim4.md
units/health-monitor/: dashboard.html  predictive_maintenance.py  start_monitoring.py
units/lm-studio-bridge/: .dockerignore  Dockerfile  mcp-validation.yml  requirements.txt  start.sh  test-build.sh  unit.yml
units/lm-studio-bridge/api/: lifecycle.py  mcp_server.py
units/lm-studio-bridge/config/: env.default
units/lm-studio-bridge/config/mocks/: completion_response.json  error_response.json  models_response.json
units/lm-studio-bridge/logic/: discovery.py  http_client.py  recovery_manager.py  resource_manager.py  translator.py
units/unified-gateway/: .dockerignore  Dockerfile  mcp-validation.yml  requirements.txt  start.sh  test-build.sh  unit.yml
units/unified-gateway/api/: auth.py  gateway_server.py  health.py
units/unified-gateway/config/: env.default
units/unified-gateway/logic/: aggregator.py  discovery_client.py  router.py
